--- a/src/styles/Hero/style.css
+++ b/src/styles/Hero/style.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 500px;
+  height: 400px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -28,6 +28,18 @@
 
 .hero h1 {
   font-size: 60px;
-  padding-top: 140px;
+  padding-top: 40px;
   margin-top: 0;
+
 }
+
+.hero h5 {
+  color: white;
+  font-size: 20px;
+  padding: 40px;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 0;
+
+}
+ 
