--- a/src/styles/SearchForm/style.css
+++ b/src/styles/SearchForm/style.css
@@ -1,9 +1,10 @@
-form.search {
-  overflow: auto;
-  margin-bottom: 10px;
+.form {
+  margin: 20px;
 }
 
-form.search button[type="submit"] {
-  float: right;
-  margin-top: 10px;
+.form input {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 100%;
 }
