updated css for nav bar and home page,  added image to home page

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,3 +2,14 @@ nav.navbar.navbar-default {
   min-height: 150px;
   margin-bottom: 0;
 }
+
+#zurek {
+  font-style: cursive;
+  font-family: "Lucida Handwriting";
+  color:blue
+}
+
+#navbar {
+  display: flex;
+  justify-content: left;
+}
