--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
   min-height: 100px;
-  background: #E5E5E5;
+  background: #e5e5e5;
   position: relative;
 }
 
@@ -13,5 +13,12 @@
   left: 0;
   right: 0;
   padding: 3px;
-  background: #dbe0acfe;
+  /* background: #dbe0acfe; */
+}
+
+#myIcon {
+  font-size: 60px;
+}
+#zurekFooter {
+  color:blue;
 }
