--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,5 +1,5 @@
 .footer {
-  min-height: 100px;
+  min-height: 115px;
   background: #e5e5e5;
   position: relative;
 }
@@ -9,6 +9,7 @@
   justify-content: center;
   position: absolute;
   justify-content: center;
+  /* top: 10px; */
   bottom: 0;
   left: 0;
   right: 0;
