--- a/src/styles/Hero/style.css
+++ b/src/styles/Hero/style.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 600px;
+  height: 650px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -35,7 +35,7 @@
 
 .hero h5 {
   color: white;
-  font-size: 20px;
+  font-size: 16px;
   padding: 40px;
   padding-left: 10%;
   padding-right: 10%;
@@ -44,24 +44,95 @@
 }
  
 #bgZurek {
-  background-image: url("../../images/Home.jpg");
+  background-image: url("../../images/resumebg1.jpg");
   background-size: fill;
   /* background-repeat: no-repeat; */
-  background-position: bottom;
+  background-position: top;
   /* min-height: 500px; */
   /* padding-bottom: 100px; */
 }
 
 #welcome{
-  padding-top: 180px;
-  font-size: 60px;
+  padding-top: 40px;
+  font-size: 40px;
   font-family: "Lucida Handwriting";
   color:white;
 }
 
 #welcome1{
-  padding-top: 40px;
+  padding-top: 10px;
   font-size: 60px;
   font-family: "Lucida Handwriting";
   color:white;
+}
+#nameAbout{
+  padding-top: 120px;
+  font-size: 60px;
+  font-family: "sans-serif";
+  color:white;
+}
+
+#aboutBg {
+  background-image: url("../../images/bg.jpg");
+  width: 100%;
+
+  border-radius: 50%;
+  /* background-repeat: no-repeat; */
+  background-position:center;
+  /* min-height: 600px; */
+  /* padding-bottom: 100px; */
+}
+#zphoto{
+  position: relative;
+
+  top: 00%;
+  /* left: 75%; */
+  border-radius: 10%;
+  width:100px;
+  height: 80px;
+  border: 2px solid white;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  /*image*/
+  background-image: url("../../images/zurek.jpg");
+  background-size: cover;
+  
+  /* border-radius: 50%; */
+  /* background-repeat: no-repeat; */
+  background-position: center;
+  min-height: 100px;
+  padding-bottom: 100px;
+}
+
+#resumeBg {
+  background-image: url("../../images/resumebg1.jpg");
+  background-size: cover;
+  /* background-repeat: no-repeat; */
+  background-position: center;
+  /* min-height: 500px; */
+  /* padding-bottom: 100px; */
+}
+#resume {
+  padding-top: 60px;
+  padding-right: 5%;
+  
+}
+
+#btnResume {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
+#resume {
+  color: white;
+  font-size: 12px;
+  justify-items: right;
 }
