--- a/src/styles/Hero/style.css
+++ b/src/styles/Hero/style.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 650px;
+  height: 600px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -30,7 +30,6 @@
   font-size: 60px;
   padding-top: 40px;
   margin-top: 0;
-
 }
 
 .hero h5 {
@@ -73,18 +72,18 @@
 }
 
 #aboutBg {
-  background-image: url("../../images/bg.jpg");
-  width: 100%;
-
-  border-radius: 50%;
+  background-image: url("../../images/resumebg1.jpg");
+  background-size: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
+  border-radius: 0%;
   /* background-repeat: no-repeat; */
-  background-position:center;
+  background-position:right;
   /* min-height: 600px; */
   /* padding-bottom: 100px; */
 }
 #zphoto{
   position: relative;
-
   top: 00%;
   /* left: 75%; */
   border-radius: 10%;
@@ -105,7 +104,7 @@
 }
 
 #resumeBg {
-  background-image: url("../../images/resumebg1.jpg");
+  background-image: url("../../images/contactBg.jpg");
   background-size: cover;
   /* background-repeat: no-repeat; */
   background-position: center;
