--- a/src/styles/Card/style.css
+++ b/src/styles/Card/style.css
@@ -44,3 +44,45 @@
   left: 25%;
   top: 25%;
 }
+
+#pCard1 {
+  background-image: url("../../images/projects/Pick4Me-Screenshot.png");
+  background-size: fill;
+  background-position: center;
+  background-clip: content-box;
+  border: 6px solid white;
+  height:300px;
+  width: 300px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  position: relative;
+  text-align: center;
+  margin: 10px auto;
+  margin-top: 30px;
+}
+
+#pCard2 {
+  background-image: url("../../images/projects/API-Adventures-Screenshot.png");
+  background-size: 100%;
+  background-position: center;
+  background-clip: content-box;
+  border: 6px solid white;
+  height:300px;
+  width: 300px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  position: relative;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+#pCard3 {
+  background-image: url("../../images/projects/SQL-Employee-Tracker.png");
+  background-size: 100%;
+  background-position: center;
+  background-clip: content-box;
+  border: 6px solid white;
+  height:300px;
+  width: 300px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  position: relative;
+  margin: 0 auto;
+  margin-top: 30px;
+}
