--- a/src/styles/Card/style.css
+++ b/src/styles/Card/style.css
@@ -3,8 +3,8 @@
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height: 300px;
-  width: 300px;
+  height: 250px;
+  width: 250px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   margin: 0 auto;
@@ -17,8 +17,8 @@
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height:900px;
-  width: 750px;
+  height:600px;
+  width: 450px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   margin: 0 auto;
@@ -31,8 +31,8 @@
   background-position: top;
   background-clip: content-box;
   border: 6px solid white;
-  height: 900px;
-  width: 750px;
+  height: 600px;
+  width: 450px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   margin: 0 auto;
@@ -51,8 +51,8 @@
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height:300px;
-  width: 300px;
+  height:250px;
+  width: 250px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   text-align: center;
@@ -66,10 +66,11 @@
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height:300px;
-  width: 300px;
+  height:250px;
+  width: 250px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
+  text-align: center;
   margin: 0 auto;
   margin-top: 30px;
 }
@@ -79,10 +80,17 @@
   background-position: center;
   background-clip: content-box;
   border: 6px solid white;
-  height:300px;
-  width: 300px;
+  height:250px;
+  width: 250px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
+  text-align: center;
   margin: 0 auto;
   margin-top: 30px;
+}
+.hiddenLink {
+  display: none;
+}
+.card:hover .hiddenLink{
+  display: inline;
 }
