--- a/src/styles/Hero/style.css
+++ b/src/styles/Hero/style.css
@@ -146,3 +146,15 @@
   min-height: 700px;
   /* padding-bottom: 100px; */
 }
+
+#contactBg {
+  background-image: url("../../images/Home.jpg");
+  background-size: 85%;
+  /* width: 100%; */
+  height: 750px;
+  /* border-radius: 0%; */
+  /* background-repeat: no-repeat; */
+  background-position:bottom;
+  /* min-height: 600px; */
+  /* padding-bottom: 100px; */
+}
