--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,5 +1,7 @@
 .wrapper {
-  min-height: 700px;
+  /* height: 100%; */
+  min-height: 1010px;
+  max-height: 2300px;
   /* padding-bottom: 100px; */
   background-image: url("../../images/wrapper.jpg");
   background-size: fill;
