--- a/src/styles/Hero/style.css
+++ b/src/styles/Hero/style.css
@@ -1,5 +1,7 @@
 .hero {
-  height: 700px;
+  /* height: 100%; */
+  min-height: 850px;
+  max-height: 100%;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -62,7 +64,7 @@
   background-size: fill;
   /* background-repeat: no-repeat; */
   background-position: top;
-  /* min-height: 500px; */
+  min-height: 500px;
   /* padding-bottom: 100px; */
 }
 
@@ -90,7 +92,7 @@
   background-image: url("../../images/resumebg1.jpg");
   background-size: 100%;
   /* width: 100%; */
-  /* height: 100%; */
+  height: 1010px;
   border-radius: 0%;
   /* background-repeat: no-repeat; */
   background-position:right;
@@ -123,7 +125,7 @@
   background-size: cover;
   /* background-repeat: no-repeat; */
   background-position: center;
-  /* min-height: 500px; */
+  min-height: 1010px;
   /* padding-bottom: 100px; */
 }
 #resume {
@@ -167,7 +169,8 @@
   background-size: cover;
   /* background-repeat: no-repeat; */
   background-position: center;
-  min-height: 700px;
+  min-height: 1010px;
+  max-height: 2300px;
   /* padding-bottom: 100px; */
 }
 
@@ -175,7 +178,7 @@
   background-image: url("../../images/Home.jpg");
   background-size: 85%;
   /* width: 100%; */
-  height: 750px;
+ min-height: 1010px;
   /* border-radius: 0%; */
   /* background-repeat: no-repeat; */
   background-position:bottom;
